Add visit report app: frontend, backend, and deployment configuration
- Add React frontend with all components and pages
- Add FastAPI backend with authentication and CRUD operations
- Add Docker configuration for production deployment
- Add nginx configuration for reverse proxy
- Configure ports to avoid conflicts (8002, 8003, 5433)
- Add hardcoded bootstrap admin for initial access
- All sensitive files properly ignored (.env.conf, certificates)

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,70 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Dependencies
+node_modules/
+venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
+# Environment and configuration
+env.conf
 .env
+.env.local
+.env.*.local
 
-# Backend (exclude from frontend repository)
-backend/
+# Build outputs
+dist/
+build/
+*.egg-info/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/
+server.log
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Uploads
+uploads/
+backend/uploads/
+
+# Docker
+.dockerignore
+
+# Testing
+.coverage
+.pytest_cache/
+htmlcov/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+
+.sh
+
+start_network.sh
+stop_network.sh
+
+.env.conf
+.env.conf.example
+.env
+PRODUCTION_DEVELOPMENT.md
+PRODUCTION_DEPLOYMENT.md
+load_env_conf.sh
