--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.2.0",
+    "react-simple-maps": "^3.0.0",
     "react-speech-recognition": "^4.0.1",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
